# splent_feature_theme

./: MANIFEST.in  pyproject.toml
src/splent_io/splent_feature_theme/: __init__.py  hooks.py  nav.py  routes.py  tokens.py
src/splent_io/splent_feature_theme/assets/css/: public.css
src/splent_io/splent_feature_theme/templates/: public_base.html
src/splent_io/splent_feature_theme/templates/blocks/: hero.html
src/splent_io/splent_feature_theme/templates/theme/: index.html  preview.html
src/splent_io/splent_feature_theme/templates/theme/admin/: appearance.html  menus.html
src/splent_io/splent_feature_theme/tests/functional/: test_routes.py
src/splent_io/splent_feature_theme/tests/unit/: test_services.py
src/splent_io/splent_feature_theme/translations/: messages.pot
src/splent_io/splent_feature_theme/translations/es/LC_MESSAGES/: messages.po
